[project]
name = "targeter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
